applications/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: istio-system
    labels:
        istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
    name: observability
