applications/istio/kiali.yaml
---
# Source: kiali-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: kiali
    namespace: istio-system
    labels:
        helm.sh/chart: kiali-server-1.82.0
        app: kiali
        app.kubernetes.io/name: kiali
        app.kubernetes.io/instance: kiali
        version: "v1.82.0"
        app.kubernetes.io/version: "v1.82.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: "kiali"
spec:
    ports:
        -   name: http
            appProtocol: http
            protocol: TCP
            port: 20001
        -   name: http-metrics
            appProtocol: http
            protocol: TCP
            port: 9090
    selector:
        app.kubernetes.io/name: kiali
        app.kubernetes.io/instance: kiali
...
---
# Source: kiali-server/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kiali
    namespace: istio-system
    labels:
        helm.sh/chart: kiali-server-1.82.0
        app: kiali
        app.kubernetes.io/name: kiali
        app.kubernetes.io/instance: kiali
        version: "v1.82.0"
        app.kubernetes.io/version: "v1.82.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: "kiali"
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: kiali
            app.kubernetes.io/instance: kiali
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
        type: RollingUpdate
    template:
        metadata:
            name: kiali
            labels:
                helm.sh/chart: kiali-server-1.82.0
                app: kiali
                app.kubernetes.io/name: kiali
                app.kubernetes.io/instance: kiali
                version: "v1.82.0"
                app.kubernetes.io/version: "v1.82.0"
                app.kubernetes.io/managed-by: Helm
                app.kubernetes.io/part-of: "kiali"
                sidecar.istio.io/inject: "false"
            annotations:
                checksum/config: 19405f971010f37081fa485f6c53616dfdf97d1d372e4ac9e09434cf0e71f02d
                prometheus.io/scrape: "true"
                prometheus.io/port: "9090"
                kiali.io/dashboards: go,kiali
        spec:
            serviceAccountName: kiali
            containers:
                -   image: "quay.io/kiali/kiali:v1.82"
                    imagePullPolicy: Always
                    name: kiali
                    command:
                        - "/opt/kiali/kiali"
                        - "-config"
                        - "/kiali-configuration/config.yaml"
                    securityContext:
                        allowPrivilegeEscalation: false
                        privileged: false
                        readOnlyRootFilesystem: true
                        runAsNonRoot: true
                        capabilities:
                            drop:
                                - ALL
                    ports:
                        -   name: api-port
                            containerPort: 20001
                        -   name: http-metrics
                            containerPort: 9090
                    readinessProbe:
                        httpGet:
                            path: /kiali/healthz
                            port: api-port
                            scheme: HTTP
                        initialDelaySeconds: 5
                        periodSeconds: 30
                    livenessProbe:
                        httpGet:
                            path: /kiali/healthz
                            port: api-port
                            scheme: HTTP
                        initialDelaySeconds: 5
                        periodSeconds: 30
                    volumeMounts:
                        -   name: kiali-configuration
                            mountPath: "/kiali-configuration"
                        -   name: kiali-cert
                            mountPath: "/kiali-cert"
                        -   name: kiali-secret
                            mountPath: "/kiali-secret"
                        -   name: kiali-cabundle
                            mountPath: "/kiali-cabundle"
                    resources:
                        limits:
                            memory: 1Gi
                        requests:
                            cpu: 10m
                            memory: 64Mi
            volumes:
                -   name: kiali-configuration
                    configMap:
                        name: kiali
                -   name: kiali-cert
                    secret:
                        secretName: istio.kiali-service-account
                        optional: true
                -   name: kiali-secret
                    secret:
                        secretName: kiali
                        optional: true
                -   name: kiali-cabundle
                    configMap:
                        name: kiali-cabundle
                        optional: true
...
