applications/istio/loki.yaml
---
# Source: loki/templates/service-memberlist.yaml
apiVersion: v1
kind: Service
metadata:
    name: loki-memberlist
    namespace: istio-system
    labels:
        helm.sh/chart: loki-6.0.0
        app.kubernetes.io/name: loki
        app.kubernetes.io/instance: loki
        app.kubernetes.io/version: "3.0.0"
        app.kubernetes.io/managed-by: Helm
spec:
    type: ClusterIP
    clusterIP: None
    ports:
        - name: tcp
          port: 7946
          targetPort: http-memberlist
          protocol: TCP
    selector:
        app.kubernetes.io/name: loki
        app.kubernetes.io/instance: loki
        app.kubernetes.io/part-of: memberlist
---
# Source: loki/templates/single-binary/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
    name: loki-headless
    namespace: istio-system
    labels:
        helm.sh/chart: loki-6.0.0
        app.kubernetes.io/name: loki
        app.kubernetes.io/instance: loki
        app.kubernetes.io/version: "3.0.0"
        app.kubernetes.io/managed-by: Helm
        variant: headless
        prometheus.io/service-monitor: "false"
    annotations:
spec:
    clusterIP: None
    ports:
        - name: http-metrics
          port: 3100
          targetPort: http-metrics
          protocol: TCP
    selector:
        app.kubernetes.io/name: loki
        app.kubernetes.io/instance: loki
---
# Source: loki/templates/single-binary/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: loki
    namespace: istio-system
    labels:
        helm.sh/chart: loki-6.0.0
        app.kubernetes.io/name: loki
        app.kubernetes.io/instance: loki
        app.kubernetes.io/version: "3.0.0"
        app.kubernetes.io/managed-by: Helm
    annotations:
spec:
    type: ClusterIP
    ports:
        - name: http-metrics
          port: 3100
          targetPort: http-metrics
          protocol: TCP
        - name: grpc
          port: 9095
          targetPort: grpc
          protocol: TCP
    selector:
        app.kubernetes.io/name: loki
        app.kubernetes.io/instance: loki
        app.kubernetes.io/component: single-binary
---
# Source: loki/templates/single-binary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: loki
    namespace: istio-system
    labels:
        helm.sh/chart: loki-6.0.0
        app.kubernetes.io/name: loki
        app.kubernetes.io/instance: loki
        app.kubernetes.io/version: "3.0.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: single-binary
        app.kubernetes.io/part-of: memberlist
spec:
    replicas: 1
    podManagementPolicy: Parallel
    updateStrategy:
        rollingUpdate:
            partition: 0
    serviceName: loki-headless
    revisionHistoryLimit: 10

    persistentVolumeClaimRetentionPolicy:
        whenDeleted: Delete
        whenScaled: Delete
    selector:
        matchLabels:
            app.kubernetes.io/name: loki
            app.kubernetes.io/instance: loki
            app.kubernetes.io/component: single-binary
    template:
        metadata:
            annotations:
                checksum/config: d378803f8e80ff751fb2c3d0262d651fc521f91169c30b550b3003701ee357cb
            labels:
                app.kubernetes.io/name: loki
                app.kubernetes.io/instance: loki
                app.kubernetes.io/component: single-binary
                app.kubernetes.io/part-of: memberlist
        spec:
            serviceAccountName: loki
            automountServiceAccountToken: true
            enableServiceLinks: true

            securityContext:
                fsGroup: 10001
                runAsGroup: 10001
                runAsNonRoot: true
                runAsUser: 10001
            terminationGracePeriodSeconds: 30
            containers:
                - name: loki
                  image: docker.io/grafana/loki:3.0.0
                  imagePullPolicy: IfNotPresent
                  args:
                      - -config.file=/etc/loki/config/config.yaml
                      - -target=all
                  ports:
                      - name: http-metrics
                        containerPort: 3100
                        protocol: TCP
                      - name: grpc
                        containerPort: 9095
                        protocol: TCP
                      - name: http-memberlist
                        containerPort: 7946
                        protocol: TCP
                  securityContext:
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop:
                              - ALL
                      readOnlyRootFilesystem: true
                  readinessProbe:
                      httpGet:
                          path: /ready
                          port: http-metrics
                      initialDelaySeconds: 30
                      timeoutSeconds: 1
                  volumeMounts:
                      - name: tmp
                        mountPath: /tmp
                      - name: config
                        mountPath: /etc/loki/config
                      - name: runtime-config
                        mountPath: /etc/loki/runtime-config
                      - name: storage
                        mountPath: /var/loki
                  resources:
                    {}
            affinity:
                podAntiAffinity:
                    requiredDuringSchedulingIgnoredDuringExecution:
                        - labelSelector:
                              matchLabels:
                                  app.kubernetes.io/component: single-binary
                          topologyKey: kubernetes.io/hostname
            volumes:
                - name: tmp
                  emptyDir: {}
                - name: config
                  configMap:
                      name: loki
                      items:
                          - key: "config.yaml"
                            path: "config.yaml"
                - name: runtime-config
                  configMap:
                      name: loki-runtime
    volumeClaimTemplates:
        - apiVersion: v1
          kind: PersistentVolumeClaim
          metadata:
              name: storage
          spec:
              accessModes:
                  - ReadWriteOnce
              resources:
                  requests:
                      storage: "10Gi"
