applications/istio/otel.yaml
apiVersion: v1
kind: Service
metadata:
    name: opentelemetry-collector
    namespace: observability
    labels:
        app: opentelemetry-collector
spec:
    ports:
        - name: grpc-opencensus
          port: 55678
          protocol: TCP
          targetPort: 55678
        - name: grpc-otlp # Default endpoint for OpenTelemetry receiver.
          port: 4317
          protocol: TCP
          targetPort: 4317
        - name: http-otlp # HTTP endpoint for OpenTelemetry receiver.
          port: 4318
          protocol: TCP
          targetPort: 4318
    selector:
        app: opentelemetry-collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: opentelemetry-collector
    namespace: observability
spec:
    selector:
        matchLabels:
            app: opentelemetry-collector
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: opentelemetry-collector
                sidecar.istio.io/inject: "false" # do not inject
        spec:
            containers:
                - command:
                      - "/otelcol"
                      - "--config=/conf/opentelemetry-collector-config.yaml"
                  image: otel/opentelemetry-collector:0.54.0
                  imagePullPolicy: IfNotPresent
                  name: opentelemetry-collector
                  ports:
                      - containerPort: 4317
                        protocol: TCP
                      - containerPort: 4318
                        protocol: TCP
                      - name: grpc-opencensus
                        containerPort: 55678
                        protocol: TCP
                  resources:
                      limits:
                          cpu: "2"
                          memory: 4Gi
                      requests:
                          cpu: 200m
                          memory: 400Mi
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
                  volumeMounts:
                      - name: opentelemetry-collector-config-vol
                        mountPath: /conf
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            terminationGracePeriodSeconds: 30
            volumes:
                - configMap:
                      defaultMode: 420
                      items:
                          - key: opentelemetry-collector-config
                            path: opentelemetry-collector-config.yaml
                      name: opentelemetry-collector-conf
                  name: opentelemetry-collector-config-vol
