applications/istio/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: zipkin
    namespace: istio-system
    labels:
        app: zipkin
spec:
    selector:
        matchLabels:
            app: zipkin
    template:
        metadata:
            labels:
                app: zipkin
                sidecar.istio.io/inject: "false"
        spec:
            containers:
                - name: zipkin
                  image: openzipkin/zipkin-slim:3.1.1
                  readinessProbe:
                      httpGet:
                          path: /health
                          port: 9411
                      initialDelaySeconds: 5
                      periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
    name: tracing
    namespace: istio-system
    labels:
        app: zipkin
spec:
    type: ClusterIP
    ports:
        - name: http-query
          port: 80
          protocol: TCP
          targetPort: 9411
    selector:
        app: zipkin
---
apiVersion: v1
kind: Service
metadata:
    labels:
        name: zipkin
    name: zipkin
    namespace: istio-system
spec:
    ports:
        - port: 9411
          targetPort: 9411
          name: http-query
    selector:
        app: zipkin
